--- a/source/modules/core/views/sidebar-view.html
+++ b/source/modules/core/views/sidebar-view.html
@@ -3,7 +3,8 @@
         <img ng-src="https://cdn.icon-icons.com/icons2/582/PNG/512/woen-2_icon-icons.com_55032.png" style="height: 60px">
         <p><b>Welcome, Sandeep Jadhav</b></p>
       </div>
-      <div class="sidebar-menu sidebar-color" slim-scroll height="calc(100vh - 170px)">
-        <vertical-menu config="vm.config"></vertical-menu>
+      <div class="sidebar-menu sidebar-color" slim-scroll height="calc(100vh - 170px)" uib-collapse="!vm.isCollapsed">
+        <vertical-menu config="vm.mainMenu"></vertical-menu>
       </div>
   </section>
+
